# Agent-YouTube-Summary

./: .env.example  CLAUDE.md  README.md  pyproject.toml  registry.json  settings.json  settings.schema.json  widgets.schema.json
.agents/plans/: align-shared-platform.md  full-agent-implementation.md
prompts/: summarize_video.md
src/agent_youtube_summary/: __init__.py  app.py  config.py  db.py  discovery.py  pipeline.py  rollup.py  settings.py  stage_collect.py  stage_summarize.py
src/agent_youtube_summary/routes/: __init__.py  rollups.py  settings_page.py
templates/: rollup_detail.html  rollups.html  settings.html
tests/: conftest.py  test_app.py  test_db.py  test_discovery.py  test_pipeline.py  test_rollup.py  test_settings.py  test_stage_collect.py  test_stage_summarize.py
