[project]
name = "agent-youtube-summary"
version = "0.1.0"
description = "YouTube channel monitoring agent with per-video summarization and daily rollups for the ArtimesOne platform."
requires-python = ">=3.12"
dependencies = [
    "utils-youtube @ {root:uri}/../Utils-YouTube",
    "openai>=1.60,<2.0",
    "aiosqlite>=0.20,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.34,<1.0",
    "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff",
    "httpx>=0.28,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agent_youtube_summary"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
